--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3003",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "sst dev next dev",
+    "lint": "next lint",
+    "start": "next start"
   },
   "dependencies": {
     "@heroicons/react": "^2.1.1",
@@ -23,6 +23,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-facebook": "^9.0.12",
+    "react-ga4": "^2.1.0",
+    "sst": "ion",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7"
   },
