--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "dev": "sst dev next dev",
+    "dev": "next dev",
     "lint": "next lint",
     "start": "next start"
   },
@@ -24,7 +24,6 @@
     "react-dom": "^18",
     "react-facebook": "^9.0.12",
     "react-ga4": "^2.1.0",
-    "sst": "ion",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7"
   },
